--- a/todo.html
+++ b/todo.html
@@ -3,17 +3,93 @@
 
 <head>
     <style>
+        * {
+            box-sizing: border-box;
+        }
 
+        ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        ul li {
+            cursor: pointer;
+            position: relative;
+            padding: 12px 8px 12px 40px;
+            background-color: grey;
+            color: aliceblue;
+            font-size: 18px;
+            transition: 0.2s;
+        }
+
+        .header {
+            background-color: azure;
+            font-family: Georgia;
+            position: relative;
+            padding: 30px 40px;
+            text-align: center;
+        }
+
+        ul li:nth-child(odd) {
+            background-color: darkgrey;
+        }
+
+        ul li:hover {
+            background: darkcyan;
+        }
+
+        /* es wird ein "Rahmen erstellt und gedreht", welcher dann aussieht wie ein Haken --> abgehakt bei click*/
+        ul li:checked::before {
+            content: "";
+            position: absolute;
+            border-color: #fff;
+            border-style: solid;
+            border-width: 0 2px 2px 0;
+            top: 10px;
+            left: 16px;
+            transform: rotate(45deg);
+            height: 15px;
+            width: 7px;
+        }
+
+        /* Style the close button */
+        .close {
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: 12px 16px 12px 16px;}
+
+        .close:hover {
+                background-color: #36f4e4;
+                color: white;
+            }
+
+        .neuesElement {
+            padding: 10px;
+            width: 25%;
+            background-color: black;
+            color: white;
+        }
+        .neuesElement:hover {
+            background-color:darkcyan;
+        }
     </style>
 </head>
 
 <body>
-    <script src='fortodo.js'></script>
-    <div id="myDIV" class="header" >
-    <h1> The To Do List </h1>
-    <input type="text" id="Eingabefeld" placeholder="Title...">
-    <span onlick="newElement()" class="neuesElement">Add</span>
+    <script src="fortodo.js"></script>
+    <div id="myDIV" class="header">
+        <h1>The To Do List</h1>
+        <input type="text" id="Eingabefeld" placeholder="Title..." />
+        <span onlick="newElement()" class="neuesElement">Add</span>
     </div>
+
+    <!-- ungeordnete Liste -->
+    <ul id="myUl">
+        <li>Deadlift 70x4x8</li>
+        <li>Benchpress 43x4xmax</li>
+        <li>Row Bizeps 40x4x10</li>
+    </ul>
 </body>
 
 </html>
