--- a/todo.html
+++ b/todo.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-    <script src="fortodo.js"></script>
+    <script src="fortodo.js" deferSS></script>
     <div id="myDIV" class="header">
         <h1>The To Do List</h1>
         <input type="text" id="Eingabefeld" placeholder="Title..." />
@@ -87,7 +87,7 @@
     <!-- ungeordnete Liste -->
     <ul id="myUl">
         <li>Deadlift 70x4x8</li>
-        <li>Benchpress 43x4xmax</li>
+        <li class="checked">s Benchpress 43x4xmax</li>
         <li>Row Bizeps 40x4x10</li>
     </ul>
 </body>
