--- a/todo.html
+++ b/todo.html
@@ -38,6 +38,12 @@
             background: darkcyan;
         }
 
+        ul li.checked {
+            background: #888;
+            color: #fff;
+            text-decoration: line-through;
+        }
+
         /* es wird ein "Rahmen erstellt und gedreht", welcher dann aussieht wie ein Haken --> abgehakt bei click*/
         ul li:checked::before {
             content: "";
@@ -57,12 +63,13 @@
             position: absolute;
             right: 0;
             top: 0;
-            padding: 12px 16px 12px 16px;}
+            padding: 12px 16px 12px 16px;
+        }
 
         .close:hover {
-                background-color: #36f4e4;
-                color: white;
-            }
+            background-color: #36f4e4;
+            color: white;
+        }
 
         .neuesElement {
             padding: 10px;
@@ -70,14 +77,15 @@
             background-color: black;
             color: white;
         }
+
         .neuesElement:hover {
-            background-color:darkcyan;
+            background-color: darkcyan;
         }
     </style>
 </head>
 
 <body>
-    <script src="fortodo.js" deferSS></script>
+    <script src="fortodo.js" defer></script>
     <div id="myDIV" class="header">
         <h1>The To Do List</h1>
         <input type="text" id="Eingabefeld" placeholder="Title..." />
@@ -87,9 +95,12 @@
     <!-- ungeordnete Liste -->
     <ul id="myUl">
         <li>Deadlift 70x4x8</li>
-        <li class="checked">s Benchpress 43x4xmax</li>
-        <li>Row Bizeps 40x4x10</li>
+        <li class="checked">Benchpress 43x4xmax</li>
+        <li>Row Biceps 40x4x10</li>
+        <li>Hug Machine 35x4x8</li>
     </ul>
 </body>
 
 </html>
+
+adjs
