--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="style.css">
+    <script  src="fortodo.js"></script>
+    <script src="writefile.js" type="module"></script>    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <script src="fortodo.js" defer></script>
     <div id="myDIV" class="header">
         <h1>The To Do List</h1>
         <input type="text" id="Eingabefeld" placeholder="Title..." />
