writes inputValue in session.Storage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script  src="fortodo.js"></script>
-    <script src="writefile.js" type="module"></script>    
+    <!-- <script src="writefile.js" type="module"></script>     -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,10 +16,10 @@
 
     <!-- ungeordnete Liste -->
     <ul id="myUl">
-        <li>Deadlift 70x4x8</li>
+        <!-- <li>Deadlift 70x4x8</li>
         <li class="checked">Benchpress 43x4xmax</li>
         <li>Row Biceps 40x4x10</li>
-        <li>Hug Machine 35x4x8</li>
+        <li>Hug Machine 35x4x8</li> -->
     </ul>
 </body>
 
